--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="robot.org.boiteameuh.MainActivity">
+    android:background="@drawable/fond"
+    tools:context="robot.org.boiteameuh.MainActivity" >
 
     <Button
         android:layout_width="100dp"
@@ -34,7 +35,7 @@
      android:layout_width="100dp"
      android:layout_height="50dp"
      android:id="@+id/boutonAccords"
-     android:text="Accords"
+     android:text="Progression"
         android:background="@drawable/border"
         style="@style/Widget.AppCompat.Button.Colored"
         android:backgroundTint="#3F5E8C"
@@ -51,8 +52,6 @@
         android:gravity="center"
         android:editable="false"
         android:layout_alignTop="@+id/boutonTonalité"
-        android:layout_toRightOf="@+id/majeur"
-        android:layout_toEndOf="@+id/majeur"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp" />
 
@@ -68,41 +67,21 @@
         android:layout_alignLeft="@+id/texteTonalité"
         android:layout_alignStart="@+id/texteTonalité" />
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/majeur"
-        android:text="Majeur"
-        android:background="@drawable/border"
-        android:textColor="#F5FFFF"
-        android:backgroundTint="#3F5E8C"
-        android:layout_alignBaseline="@+id/mineur"
-        android:layout_alignBottom="@+id/mineur"
-        android:layout_alignLeft="@+id/boutonTonalité"
-        android:layout_alignStart="@+id/boutonTonalité" />
 
-    <Button
-        android:id="@+id/mineur"
-        android:text="Mineur"
-        android:background="@drawable/border"
-        android:textColor="#F5FFFF"
-        android:backgroundTint="#3F5E8C"
-        android:clickable="true"
-
-        android:layout_height="50dp"
-        android:layout_width="100dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/texteTonalité"
-        android:layout_alignEnd="@+id/texteTonalité"
-        android:layout_marginBottom="16dp" />
+    <Switch
+        android:text="Mode mineur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch2"
+        android:layout_below="@+id/boutonTonalité"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        />
 
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/lecture"
-        android:background="@drawable/boutonrond"
+        android:background="@drawable/music"
         android:id="@+id/lecture"
         android:onClick="test"
         android:layout_alignParentBottom="true"
