--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,91 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/fond"
-    tools:context="robot.org.boiteameuh.MainActivity" >
-
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/boutonTonalité"
-        android:text="Tonalité"
-        android:backgroundTint="#3F5E8C"
-        android:background="@drawable/border"
-        android:textColor="#F5FFFF"
-        android:clickable="true"
+    tools:context="robot.org.boiteameuh.MainActivity">
 
 
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="51dp"
-        android:layout_below="@+id/boutonAccords"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-     android:layout_width="100dp"
-     android:layout_height="50dp"
-     android:id="@+id/boutonAccords"
-     android:text="Progression"
-        android:background="@drawable/border"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:backgroundTint="#3F5E8C"
-        android:clickable="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/boutonTonalité"
-        android:layout_alignStart="@+id/boutonTonalité" />
-
-    <EditText
-        android:id="@+id/texteTonalité"
-        android:background="@drawable/editvue1"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:editable="false"
-        android:layout_alignTop="@+id/boutonTonalité"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp" />
-
-    <EditText
-        android:id="@+id/texteAccords"
-        android:background="@drawable/editvue1"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:editable="false"
-        android:gravity="center"
-
-        android:layout_above="@+id/boutonTonalité"
-        android:layout_alignLeft="@+id/texteTonalité"
-        android:layout_alignStart="@+id/texteTonalité" />
-
-
-    <Switch
-        android:text="Mode mineur"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/switch2"
-        android:layout_below="@+id/boutonTonalité"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        />
+        android:layout_above="@+id/lecture"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true">
+
+        <Switch
+            android:id="@+id/switch2"
+            android:text="Mineur "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorblanc"
+            android:textStyle="bold"
+            android:textSize="9pt"
+            tools:textCursorDrawable="@color/colorAccent"
+            />
+
+        <TextView
+            android:id="@+id/modemajeur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Majeur"
+            android:textStyle="bold"
+            android:textColor="@color/colorblanc"
+            android:textSize="9pt" />
+    </LinearLayout>
 
     <ImageButton
+        android:id="@+id/lecture"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/music"
-        android:id="@+id/lecture"
         android:onClick="test"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginBottom="15dp"
+        android:layout_centerHorizontal="true"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/boutonAccords"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Progression"
+            android:background="@drawable/border"
+            android:backgroundTint="@color/colorbleu"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/colorblanc"
+            android:clickable="true"/>
+
+        <EditText
+            android:id="@+id/texteAccords"
+            android:background="@drawable/editvue1"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:editable="false"
+            android:layout_toRightOf="@id/boutonAccords"
+            android:layout_marginLeft="30dp"
+            android:textAlignment="center"
+            android:layout_alignTop="@+id/boutonAccords"
+            android:backgroundTint="@color/colorblanc"
+            tools:background="@color/colorblanc" />
+        <Button
+            android:id="@+id/boutonTonalité"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Tonalité"
+            android:background="@drawable/border"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/colorblanc"
+            android:clickable="true"
+            android:backgroundTint="@color/colorbleu"/>
+
+        <EditText
+            android:id="@+id/texteTonalité"
+            android:background="@drawable/editvue1"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_toRightOf="@id/boutonTonalité"
+            android:layout_marginLeft="30dp"
+            android:textAlignment="center"
+            android:editable="false"
+            android:backgroundTint="@color/colorblanc"/>
+    </LinearLayout>
 
 </RelativeLayout>
