--- a/app/src/main/res/layout-land/texte.xml
+++ b/app/src/main/res/layout-land/texte.xml
@@ -1,26 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#f0f0f0"
+    android:orientation="horizontal">
 
-
-    <TextView
-        android:id="@+id/nom"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16pt"
-        android:background="@drawable/border"
-        android:gravity="center"
-        android:text="nom"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_margin="5dp"
+        android:background="@drawable/post_border_style"
+        android:orientation="vertical" >
 
-    <View
-        android:layout_height="1dp"
-        android:id="@+id/separator"
-        android:visibility="visible"
-        android:background="#046380"
-        android:layout_width="300dp"
-        android:layout_alignTop="@+id/nom"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/box_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:background="@drawable/post_background_style"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/single_post_circuito_linearbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:orientation="horizontal"
+                android:padding="5dp" >
+
+
+                <TextView
+                    android:id="@+id/nom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="14pt"
+                    android:typeface="serif"
+                    android:gravity="center"
+                    android:text="nom"
+                    android:textStyle="italic"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+
+
+
+
+
